# sdl3-ter

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md
cmake/: compile-hlsl.cmake  copy-assets.cmake
src/: CMakeLists.txt  Mount_Fuji.dds  app.ixx  camera.ixx  clock.ixx  io.ixx  main.cpp  pch.hpp  pipeline.ixx  sdl-pipeline.ixx  sdl-types.ixx  sdl.ixx  terrain.fs.hlsl  types.ixx
src/shaders/: cm_terrain.vs.hlsl  terrain.cs.hlsl  terrain.fs.hlsl  terrain.vs.hlsl
